--- a/src/main/webapp/css/all.css
+++ b/src/main/webapp/css/all.css
@@ -452,3 +452,7 @@ iframe[id^='twitter-box']{ width:100% !important;}
     background-color: #555 !important;
     color: #fff !important;
 }
+
+.welcomeDiv {
+    float: right;
+}
