Move some common code into AuthUtils.

--- a/src/main/webapp/WEB-INF/templates/layouts/default.jade
+++ b/src/main/webapp/WEB-INF/templates/layouts/default.jade
@@ -1,13 +1,10 @@
 -@ val title: String
 -@ val body: String
-- import org.pac4j.j2e.configuration.ClientsConfiguration
 - import org.pac4j.j2e.util.UserUtils
-- import org.pac4j.oauth.client.FacebookClient
 - import org.pac4j.core.context._
+- import com.chicagof1.auth.AuthUtils
 - session.setAttribute(HttpConstants.REQUESTED_URL, null)
-- val facebookClient = ClientsConfiguration.getClients.findClient("FacebookClient").asInstanceOf[FacebookClient]
 - val user = UserUtils.getProfile(session)
-- val webContext = new J2EContext(request, response)
 !!!
 html
   head
@@ -43,7 +40,7 @@ html
           ul(id="menu" class="nav navbar-nav navbar-right")
             - if (user == null) {
               li
-                a(href="#{facebookClient.getRedirectAction(webContext, false, false).getLocation()}") Login
+                a(href="#{AuthUtils.redirectForAuthentication(request, response)}") Login
             - } else {
               li
                 a(href="/logout") Logout
@@ -52,6 +49,6 @@ html
       != body
       - if (user != null) {
         .welcomeDiv
-          p Logged in as #{user.getAttribute("name")}
+          p Logged in as #{AuthUtils.fullName(user)}
         .clear
       - }
