Add menu link to user profile when logged in. It currently points to the racer statistics page if the user full name matches the racer name.

--- a/src/main/webapp/WEB-INF/templates/layouts/default.jade
+++ b/src/main/webapp/WEB-INF/templates/layouts/default.jade
@@ -36,6 +36,10 @@ html
               a(href="/editions") Editions
             li
               a(href="/videos") Videos
+            - if (user != null) {
+              li
+                a(href="/user/profile") My Profile
+            - }
           /.clear
           ul(id="menu" class="nav navbar-nav navbar-right")
             - if (user == null) {
