--- a/src/main/webapp/WEB-INF/templates/views/race.jade
+++ b/src/main/webapp/WEB-INF/templates/views/race.jade
@@ -1,7 +1,7 @@
 -@ val race: com.chicagof1.model.Race
 - attributes("title") = s"Race ${race.raceId}"
 - attributes("titleName") = "Races"
-- attributes("source") = "/data/races/" + race.raceId
+- attributes("source") = "/api/races/" + race.raceId
 
 h1(class='pageTitle')= s"Race ${race.raceId}"
 #content
