Add Chicago F1 logo to home page.

--- a/src/main/webapp/css/all.css
+++ b/src/main/webapp/css/all.css
@@ -519,3 +519,11 @@ h3.championshipTitle {
 .championshipValue {
     font-weight: 400;
 }
+
+#homeLogoDiv {
+    text-align: center;
+}
+
+.homeLogo {
+    max-width: 100%;
+}
