--- a/src/main/webapp/css/flags.css
+++ b/src/main/webapp/css/flags.css
@@ -9,12 +9,13 @@
 .flag.flag-de {background-position: -75px 0}
 .flag.flag-fr {background-position: 0 -15px}
 .flag.flag-gb {background-position: -25px -15px}
-.flag.flag-it {background-position: -50px -15px}
-.flag.flag-kr {background-position: -75px -15px}
-.flag.flag-lt {background-position: 0 -30px}
-.flag.flag-mx {background-position: -25px -30px}
-.flag.flag-my {background-position: -50px -30px}
-.flag.flag-pl {background-position: -75px -30px}
-.flag.flag-ro {background-position: 0 -45px}
-.flag.flag-ru {background-position: -25px -45px}
-.flag.flag-us {background-position: -50px -45px}
+.flag.flag-in {background-position: -50px -15px}
+.flag.flag-it {background-position: -75px -15px}
+.flag.flag-kr {background-position: 0 -30px}
+.flag.flag-lt {background-position: -25px -30px}
+.flag.flag-mx {background-position: -50px -30px}
+.flag.flag-my {background-position: -75px -30px}
+.flag.flag-pl {background-position: 0 -45px}
+.flag.flag-ro {background-position: -25px -45px}
+.flag.flag-ru {background-position: -50px -45px}
+.flag.flag-us {background-position: -75px -45px}
