Add photos page powered by instagram.

--- a/src/main/webapp/WEB-INF/templates/layouts/default.jade
+++ b/src/main/webapp/WEB-INF/templates/layouts/default.jade
@@ -15,6 +15,7 @@ html
     script(type='text/javascript' src='https://cdn.datatables.net/tabletools/2.2.2/js/dataTables.tableTools.js')
     link(rel='stylesheet' href='/css/demo_table.css')
     link(rel='stylesheet' href='/css/all.css')
+    link(rel='stylesheet' href='/css/instagram.css')
     link(rel='stylesheet' href='/css/flags.css')
     link(rel='stylesheet' href='https://netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css' type='text/css')
     link(rel='stylesheet' href='https://cdn.datatables.net/1.10.2/css/jquery.dataTables.css')
@@ -30,6 +31,8 @@ html
               a(href="/") Home
             li
               a(href="/events") Events
+            li
+              a(href="/photos") Photos
             li
               a(href="/standings") Standings
             li
